# sentinel-backend/app/serializers/file_with_violations_serializer.rb
@@ -2,7 +2,14 @@ class FileWithViolationsSerializer < ActiveModel::Serializer
   attributes :id, :file_path, :analysis_job_id, :display_path, :job_status
   
   belongs_to :analysis_job
-  has_many :violations
+  has_many :violations do
+    if scope && scope[:rule_name].present?
+      rule_names = scope[:rule_name].split(',').map(&:strip)
+      object.violations.where(rule_name: rule_names)
+    else
+      object.violations
+    end
+  end
   
   # Cache the serializer
   cache key: 'file_with_violations', expires_in: 1.hour
